Modification du contenue de la page "A propos" et "projets personnels".

--- a/html/biographie.html
+++ b/html/biographie.html
@@ -25,7 +25,8 @@
                 <img src="../images/portraitDorianeRichard.jpg">
             </div>
             <div class="biography-container">
-                <p>Morbi vel ante feugiat, aliquam nisl id, pharetra felis. Ut nec dui ultrices, pellentesque est at, eleifend nunc. Sed tempus sem nec tincidunt dictum. Duis accumsan odio ut urna tristique condimentum. Ut maximus erat velit, vitae luctus ligula faucibus porttitor. Nullam convallis neque quam. Fusce quis consequat tortor. Nam mollis dui elit, id euismod nulla vestibulum ac. Nam interdum dignissim ligula non sollicitudin. Nullam quis tellus et arcu ultrices rhoncus. Sed semper, felis sed mollis ultricies, massa lectus pellentesque mauris, vel iaculis orci ligula non velit. Vestibulum condimentum leo blandit ultrices vehicula.</p>
+                <p>
+                    Bonjour, je m'appelle Doriane Richard. Je suis développeuse front-end au sein de Schneider Electric.</p>
             </div>
         </div>
     </section>
@@ -33,59 +34,60 @@
         <!-- Formations -->
         <div class="content-box">
             <h2>Formations</h2>
-            <ul class="timeline">
-                <li>
-                    <h3>BUT informatique parcours réalisation d'application : développement, conception, validation</h3>
-                    <span>UGA - IUT 2, 2023-2024</span>
-                    <p>TODO : Ajouter une description</p>
-                </li>
-                <li>
-                    <h3>BTS systèmes numériques option informatique et réseaux</h3>
-                    <span>Lycée du Grésivaudan Meylan, 2021-2023</span>
-                    <p>TODO : Ajouter une description</p>
-                </li>
-                <li>
-                    <h3>Bac sciences et techniques de l'industrie et du développement durable</h3>
-                    <span>Lycée du Grésivaudan Meylan, 2021-2023</span>
-                    <p>TODO : Ajouter une description</p>
-                </li>
-            </ul>
+            <div>
+                <ul class="timeline">
+                    <li>
+                        <h3>BUT informatique parcours réalisation d'application : développement, conception, validation</h3>
+                        <span>UGA - IUT 2, 2023-2024</span>
+                    </li>
+                    <li>
+                        <h3>BTS systèmes numériques option informatique et réseaux</h3>
+                        <span>Lycée du Grésivaudan Meylan, 2021-2023</span>
+                    </li>
+                    <li>
+                        <h3>Bac sciences et techniques de l'industrie et du développement durable</h3>
+                        <span>Lycée du Grésivaudan Meylan, 2021-2023</span>
+                    </li>
+                </ul>
+            </div>
         </div>
         <!-- Expériences professionnelles -->
         <div class="content-box">
             <h2>Expériences professionnelles</h2>
-            <ul class="timeline">
-                <li>
-                    <h3>Alternante Software Design Technician</h3>
-                    <span>Schneider Electric, 2023-2024 (11 mois)</span>
-                    <p>Pour ma 3eme année de BUT, je suis restée dans le même groupe mais pas dans la même entité.
-                        Je suis rentrée dans une équipe d'une dizaine de développeurs travaillant avec la 
-                        méthode AGILE plus précisément SCRUM et KANBAN. J'aide au maintient et au développement 
-                        de l'application web de notre service. En parallèle, je suis cheffe de projet. 
-                        Ce projet consiste à piloter l'implémentation des normes d'accessibilité dans 
-                        l'application web EcoStruxure Control Engineering.
-                    </p>
-                </li>
-                <li>
-                    <h3>Alternante en informatique industrielle et cybersécurité</h3>
-                    <span>Schneider Electric, 2021-2023 (23 mois)</span>
-                    <p>
-                        Mes missions consistaient à maintenir le parc informatique de l'usine 
-                        (résolutions de bugs, de problèmes de réseaux (Cisco), changements d'ordinateurs, …).
-                        Lors de ma deuxième année, j'ai proposé de développer une plateforme 
-                        permettant un accès rapide et sécurisée aux informations du parc informatique 
-                        et automatique de l'entité MasterTech.
-                    </p>
-                </li>
-                <li>
-                    <h3>Employé de restaurant</h3>
-                    <span>Crescendo, 2021 (2 mois)</span>
-                    <p>
-                        J'ai travaillé dans ce restaurant en tant que chargée des grillades et des entrées, 
-                        ainsi que soutient en cuisine.
-                    </p>
-                </li>
-            </ul>
+            <div class="scrolled">
+                <ul class="timeline">
+                    <li>
+                        <h3>Alternante Software Design Technician</h3>
+                        <span>Schneider Electric, 2023-2024 (11 mois)</span>
+                        <p>Pour ma 3eme année de BUT, je suis restée dans le même groupe mais pas dans la même entité.
+                            Je suis rentrée dans une équipe d'une dizaine de développeurs travaillant avec la 
+                            méthode AGILE plus précisément SCRUM et KANBAN. J'aide au maintient et au développement 
+                            de l'application web de notre service. En parallèle, je suis cheffe de projet. 
+                            Ce projet consiste à piloter l'implémentation des normes d'accessibilité dans 
+                            l'application web EcoStruxure Control Engineering.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Alternante en informatique industrielle et cybersécurité</h3>
+                        <span>Schneider Electric, 2021-2023 (23 mois)</span>
+                        <p>
+                            Mes missions consistaient à maintenir le parc informatique de l'usine 
+                            (résolutions de bugs, de problèmes de réseaux (Cisco), changements d'ordinateurs, …).
+                            Lors de ma deuxième année, j'ai proposé de développer une plateforme 
+                            permettant un accès rapide et sécurisée aux informations du parc informatique 
+                            et automatique de l'entité MasterTech.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Employé de restaurant</h3>
+                        <span>Crescendo, 2021 (2 mois)</span>
+                        <p>
+                            J'ai travaillé dans ce restaurant en tant que chargée des grillades et des entrées, 
+                            ainsi que soutient en cuisine.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>    
     <script src="../js/app.js"></script>
