Ajout du nouveau contenu dans la page "projetsProfessionnels"

--- a/html/biographie.html
+++ b/html/biographie.html
@@ -26,7 +26,19 @@
             </div>
             <div class="biography-container">
                 <p>
-                    Bonjour, je m'appelle Doriane Richard. Je suis développeuse front-end au sein de Schneider Electric.</p>
+                    Bonjour, je m'appelle Doriane Richard.
+                    Si vous êtes ici, ce n'est sûrement pas par hasard. Vous êtes probablement curieux d'en savoir plus sur moi. 
+                    Sachez que j'aime beaucoup mon ordinateur et tout ce que je peux créer avec lui, mais soyez rassuré ce n'est pas ma seule passion.
+                    J'apprécie énormément les activités manuelles. Je fais du montage, ainsi que de la peinture sur figurines. 
+                    Je participe à la confection de costumes vénitiens. J'aime flâner en prenant des photos de mon environnement mais aussi, 
+                    dessiner et lire. En plus de cela, j'aime passer du temps à jouer à des jeux, qu'il s'agisse de jeux de société ou de jeux vidéo.
+                    Récemment, j'ai commencé à participer à des jeux de rôle sur table et en grandeur nature. Je trouve cela amusant et créatif.
+                    Je prends également part aux parades vénitiennes de différentes villes. 
+                    En dehors de ces activités, je suis membre active de trois associations. L'une aide les personnes en situation de handicap à pratiquer des activités manuelles. 
+                    Une autre organise des événements et des représentations sur le thème du médiéval fantastique. 
+                    La dernière association organise un salon du livre dédié à l'imaginaire et à 
+                    la fantaisie. Si vous êtes encore là, je vous remercie d'avoir lu et vous souhaite une bonne journée.
+                </p>
             </div>
         </div>
     </section>
