--- a/html/projetsPersonnels.html
+++ b/html/projetsPersonnels.html
@@ -31,7 +31,11 @@
             </div>
             <div class="content">
                 <h1>La taverne de Bacchus</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae arcu id ultricies. Donec porttitor fringilla accumsan. Maecenas quis consectetur elit. Duis sit amet nulla in arcu tincidunt dictum lacinia eget nisl. Aliquam non suscipit ante. Nullam odio dui, scelerisque non tristique in, auctor sollicitudin magna. Nunc posuere viverra laoreet. Nam urna nisl, dignissim quis sem vitae, venenatis pretium justo. Curabitur non lacus mollis tortor viverra tempus. Nullam in pharetra leo. Etiam placerat ante in velit egestas vestibulum. Quisque eget finibus ante.</p>
+                <p>
+                    Une personne de mon entourage souhaite pouvoir gérer l'inventaire de ses caves à vins. 
+                    Plusieurs applications sont déjà sur le marché. Cependant, elles proposent majoritairement une offre freemium.
+                    Afin de me challenger, j'ai décidé de sortir de ma zone de confort et de lui apporter une solution personnalisé à ses besoins.
+                </p>
             </div>
         </section>
         <!-- Montage & Peinture de figurine -->
@@ -39,7 +43,7 @@
             <div class="content">
                 <h1>Montage & Peinture de figurine</h1>
                 <p>
-                    Cela fait maintenant 1an que j'ai commencé le montage, ainsi que la peinture de figurine. 
+                    Cela fait maintenant 1 an que j'ai commencé le montage, ainsi que la peinture de figurine. 
                     Ces deux disciplines demandent précision, rigeur et patience. Depuis peu, je commence 
                     à m'intéresser aux jeux de la catégorie "wargames". Ce sont des jeux de stratégie de guerre sur plateau.
                     Un des plus connu porte le nom de warhammer 40k.
@@ -65,7 +69,7 @@
             <div class="content">
                 <h1>Parade vénitienne</h1>
                 <p>
-                    Ma maman étant couturière, j'ai commencé à coudre très jeune. 
+                    Ma maman étant couturière, j'ai commencé cette activité très jeune. 
                     Aujourd'hui, je participe à la conception, ainsi qu'à la réalisation de costumes vénitiens.
                     Une fois le costume terminé, je parade avec celui-ci. Dernier lieu en date : le carnaval vénitien d'Annecy.
                 </p>
@@ -76,12 +80,11 @@
             <div class="content">
                 <h1>Photographie</h1>
                 <p>
-                    J'ai toujours beaucoup apprécié me poser dans un lieu et observer.
-                    Maintenant, je décide même de capturer ces moments sous forme de photos. 
+                    J'ai toujours beaucoup apprécié flâner dans un lieu.
+                    Maintenant, je décide de capturer ces moments sous forme de photos. 
                     Que ce sois un animal, un objet, de la nature ou bien une personne.
                     De plus, je suis photographe de l'association : La guilde des Ménestrels et Saltimbanques.
                     Je fais en sorte de passer inaperçue afin de capturer des moments uniques.
-                    
                 </p>
             </div>
             <div class="photos-container">
