Changement de police. Ajout images aux projets projetsProfessionnels.

--- a/html/projetsProfessionnels.html
+++ b/html/projetsProfessionnels.html
@@ -23,7 +23,7 @@
             <!-- Diana -->
             <div class="project-item">
                 <div class="top-section">
-                    <img class="image-presentation-projet" src="../images/immeuble.jpg">
+                    <img class="image-presentation-projet" src="../images/diana.png">
                     <div class="project-info">
                         <h2>Diana</h2>
                         <p>
