Ajout de contenue dans la page "Projet professionnels". Ajout d'un pied de page.

--- a/html/parametresAccessibilite.html
+++ b/html/parametresAccessibilite.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <title>Doriane Richard ~ Portfolio</title>
     <link rel="stylesheet" href="../css/barreNavigation.css">
-    <!-- <link rel="stylesheet" href="../css/barreNavigation.css"> -->
+    <link rel="stylesheet" href="../css/piedDePage.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -50,3 +50,6 @@
     </section>
     <script src="../js/app.js"></script>
 </body>
+<footer>
+    <p>© 2024 par Doriane Richard. Tous droits réservés.</p>
+</footer>
