--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Doriane Richard ~ Portfolio</title>
     <link rel="stylesheet" href="css/accueil.css">
     <link rel="stylesheet" href="css/barreNavigation.css">
+    <link rel="stylesheet" href="css/piedDePage.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
@@ -42,4 +43,7 @@
       </div>
     </section>
   </body>
+  <footer>
+    <p>© 2024 par Doriane Richard. Tous droits réservés.</p>
+  </footer>
 </html>
