--- a/html/biographie.html
+++ b/html/biographie.html
@@ -3,6 +3,7 @@
     <title>Doriane Richard ~ Portfolio</title>
     <link rel="stylesheet" href="../css/biographie.css">
     <link rel="stylesheet" href="../css/barreNavigation.css">
+    <link rel="stylesheet" href="../css/piedDePage.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -104,3 +105,6 @@
     </section>    
     <script src="../js/app.js"></script>
 </body>
+<footer>
+    <p>© 2024 par Doriane Richard. Tous droits réservés.</p>
+</footer>
