--- a/html/parametresAccessibilite.html
+++ b/html/parametresAccessibilite.html
@@ -3,51 +3,101 @@
     <title>Doriane Richard ~ Portfolio</title>
     <link rel="stylesheet" href="../css/barreNavigation.css">
     <link rel="stylesheet" href="../css/piedDePage.css">
+    <link rel="stylesheet" href="../css/parametresAccessibilite.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            transition: background-color 0.3s, color 0.3s;
+            padding: 20px;
+        }
+
+        .dark-theme {
+            background-color: #333;
+            color: #fff;
+        }
+
+        .light-theme {
+            background-color: #fff;
+            color: #333;
+        }
+
+        #theme-buttons {
+            margin-bottom: 10px;
+        }
+
+        button {
+            padding: 10px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <section id="normal-site">
-        <header class="header" id="test">
-            <nav class="navbar">
-                <a href="../index.html">Accueil</a>
-                <a href="../html/biographie.html">À propos</a>
-                <a href="../html/projetsProfessionnels.html">Projets professionnels</a>
-                <a href="../html/projetsPersonnels.html">Projets personnels</a>
-                <a href="../html/contact.html">Contact</a>
-                <a href="../html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
-            </nav>
-        </header>
-    </section>
+    <header class="header" id="test">
+        <nav class="navbar">
+            <a href="../index.html">Accueil</a>
+            <a href="../html/biographie.html">À propos</a>
+            <a href="../html/projetsProfessionnels.html">Projets professionnels</a>
+            <a href="../html/projetsPersonnels.html">Projets personnels</a>
+            <a href="../html/contact.html">Contact</a>
+            <a href="../html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
+        </nav>
+    </header>
     <br>
-
-    <div class="contenantParametreAccessibilite space-with-navbar">
-        <p>Choisissez votre mode de navigation :</p>
-        <button id="normal-mode-btn" aria-label="Ce bouton permet de passer à la version normale du site">Version Normale</button>
-        <button id="simplified-mode-btn">Version Simplifiée</button>
+    <div class="accessibility-settings" id="theme-buttons">
+        <button id="dark-theme-button">Thème Sombre</button>
+        <button id="light-theme-button">Thème Clair</button>
     </div>
 
-    <br>
-    <section id="accessible-site">
-        <h1>Bienvenue sur mon Portfolio Simplifié</h1>
-        <div>
-            <section id="home">
-                <h2>Accueil</h2>
-                <p>Contenu d'accueil...</p>
-            </section>
-            <section id="about">
-                <h2>À propos</h2>
-                <p>Contenu à propos...</p>
-            </section>
-            <section id="projects">
-                <h2>Projets</h2>
-                <p>Contenu des projets...</p>
-            </section>
-            <section id="contact">
-                <h2>Contact</h2>
-                <p>Contenu de contact...</p>
-            </section>
-        </div>
-    </section>
+    <script>
+        // JavaScript pour gérer les thèmes et l'interaction utilisateur
+        function generateSessionId() {
+            return 'session_' + Math.random().toString(36).substr(2, 9);
+        }
+
+        function saveTheme(theme) {
+            const sessionId = getSessionId();
+            sessionStorage.setItem(sessionId, theme);
+        }
+
+        function getTheme() {
+            const sessionId = getSessionId();
+            return sessionStorage.getItem(sessionId) || 'light';
+        }
+
+        function getSessionId() {
+            let sessionId = sessionStorage.getItem('sessionId');
+            if (!sessionId) {
+                sessionId = generateSessionId();
+                sessionStorage.setItem('sessionId', sessionId);
+            }
+            return sessionId;
+        }
+
+        function applyTheme(theme) {
+            if (theme === 'dark') {
+                document.body.classList.add('dark-theme');
+                document.body.classList.remove('light-theme');
+            } else {
+                document.body.classList.add('light-theme');
+                document.body.classList.remove('dark-theme');
+            }
+        }
+
+        function switchTheme(theme) {
+            saveTheme(theme);
+            applyTheme(theme);
+        }
+
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const savedTheme = getTheme();
+            applyTheme(savedTheme);
+
+            document.getElementById('dark-theme-button').addEventListener('click', () => switchTheme('dark'));
+            document.getElementById('light-theme-button').addEventListener('click', () => switchTheme('light'));
+        });
+    </script>
     <script src="../js/app.js"></script>
 </body>
 <footer>
