--- a/html/projetsProfessionnels.html
+++ b/html/projetsProfessionnels.html
@@ -164,7 +164,7 @@
                 </div>
                 <div class="description-projet scrolled">
                     <p>
-                        Ce projet WebGl consistait à créer une scène en mouvant. <br><br>
+                        Ce projet WebGl consistait à créer une scène en mouvement. <br><br>
                         Tout d'abord, nous devions créer un sol avec un objet positionné au centre de celui-ci.
                         Puis, nous devions mettre trois objets supplémentaires disposés chacun dans un coin.
                         Maintenant, cette scène composée de cinq éléments doit tourner en rond. <br><br>
