Mise à jour des appels des fichiers css.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="html/projetsProfessionnels.html">Projets professionnels</a>
         <a href="html/projetsPersonnels.html">Projets personnels</a>
         <a href="html/contact.html">Contact</a>
-        <a href="html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
+        <a href="parametresAccessibilite.html">Paramètres d'accessibilité</a>
       </nav>
     </header>
     <br>
