--- a/html/projetsPersonnels.html
+++ b/html/projetsPersonnels.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <!-- Barre de navigation -->
-    <div id="navigation-bar"></div>
+    <header class="header">
+        <nav class="navbar">
+            <a href="../index.html">Accueil</a>
+            <a href="../html/biographie.html">À propos</a>
+            <a href="../html/projetsProfessionnels.html">Projets professionnels</a>
+            <a href="../html/projetsPersonnels.html">Projets personnels</a>
+            <a href="../html/contact.html">Contact</a>
+            <a href="../html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
+        </nav>
+    </header>
     <!-- Corps de la page -->
     <div id="presentation-content" class="space-with-navbar">
         <h1 class="">Présentation de mes projets personnels</h1>
