--- a/parametresAccessibilite.html
+++ b/parametresAccessibilite.html
@@ -1,9 +1,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Doriane Richard ~ Portfolio</title>
-    <link rel="stylesheet" href="../css/barreNavigation.css">
-    <link rel="stylesheet" href="../css/piedDePage.css">
-    <link rel="stylesheet" href="../css/parametresAccessibilite.css">
+    <link rel="stylesheet" href="css/barreNavigation.css">
+    <link rel="stylesheet" href="css/piedDePage.css">
+    <link rel="stylesheet" href="css/parametresAccessibilite.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
