--- a/html/parametresAccessibilite.html
+++ b/html/parametresAccessibilite.html
@@ -1,20 +1,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Doriane Richard ~ Portfolio</title>
-    <link rel="stylesheet" href="css/barreNavigation.css">
-    <link rel="stylesheet" href="css/piedDePage.css">
-    <link rel="stylesheet" href="css/parametresAccessibilite.css">
+    <link rel="stylesheet" href="../css/barreNavigation.css">
+    <link rel="stylesheet" href="../css/piedDePage.css">
+    <link rel="stylesheet" href="../css/parametresAccessibilite.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header class="header" id="test">
         <nav class="navbar">
-            <a href="index.html" class="active">Accueil</a>
-            <a href="html/biographie.html">A propos</a>
-            <a href="html/projetsProfessionnels.html">Projets professionnels</a>
-            <a href="html/projetsPersonnels.html">Projets personnels</a>
-            <a href="html/contact.html">Contact</a>
-            <a href="parametresAccessibilite.html">Paramètres d'accessibilité</a>
+            <a href="../index.html">Accueil</a>
+            <a href="../html/biographie.html">À propos</a>
+            <a href="../html/projetsProfessionnels.html">Projets professionnels</a>
+            <a href="../html/projetsPersonnels.html">Projets personnels</a>
+            <a href="../html/contact.html">Contact</a>
+            <a href="../html/parametresAccessibilite.html">Paramètres d'accessibilité</a>
         </nav>
     </header>
     <br>
