Modification de l'affichage lors du zoom avec la police dyslexique.

--- a/html/projetsPersonnels.html
+++ b/html/projetsPersonnels.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="../css/barreNavigation.css">
     <link rel="stylesheet" href="../css/projetsPersonnels.css">
     <link rel="stylesheet" href="../css/piedDePage.css">
+    <link rel="stylesheet" href="../css/themeDyslexique.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
